Fix: Remove extra space
Remove extra space above the VoiceBack icon in the header.

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,14 @@
-
 #root {
   max-width: 100%;
-  margin: 0 auto;
-  padding: 1rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
 @media (min-width: 768px) {
   #root {
     max-width: 1280px;
-    padding: 2rem;
+    padding: 0;
   }
 }
 
